--- a/task app/index.html
+++ b/task app/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <!-- <style type="text/tailwindcss">
+  <style type="text/tailwindcss">
     @layer components {
       .btn-blue-01 {
         @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4;
@@ -24,7 +24,7 @@
         @apply p-2 flex items-center justify-between border-[1px] border-gray-200 rounded-lg;
       }
     }
-  </style> -->
+  </style>
   <body>
     <main>
       <section>
@@ -84,7 +84,7 @@
           Task Ongoing
         </h3>
         <div id="task-list" class="space-y-4">
-          <div class="tasks  p-2 flex items-center justify-between border-[1px] border-gray-200 rounded-lg">
+          <!-- <div class="tasks">
             <input
               type="text"
               value="create a landing page"
@@ -92,10 +92,10 @@
               readonly
             />
             <div class="w-[20%]">
-              <button class="delete bg-red-600 p-2 text-white rounded-lg">Delete</button>
-              <button class="edit bg-green-600 p-2 text-white rounded-lg">Edit</button>
+              <button class="delete ">Delete</button>
+              <button class="edit ">Edit</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
